CHANGES IN VERSION 1.11.3
------------------------
 o clean up code <2017-12-13, Thu>
 o remove paml_rst, codeml_mlc, codeml and jplace fortify methods according to the change of treeio (v = 1.3.3) <2017-12-07, Thu>

CHANGES IN VERSION 1.11.2
------------------------
 o keep tree order (previously using postorder) <2017-12-06-Wed>
   + https://github.com/GuangchuangYu/ggtree/issues/157
 o remove beast object support as read.beast output treedata object in treeio <2017-12-05, Tue>
 o deprecate subview, annotation_image and phylopic; remove theme_transparent <2017-12-04, Mon>
 o geom_tiplab now supports geom = "image" or geom = "phylopic" <2017-12-04, Mon>
 o A new layer geom_nodelab that equivalent to geom_tiplab but works for internal node <2017-12-04, Mon>

CHANGES IN VERSION 1.11.1
------------------------
 o bug fixed in geom_tiplab, now `offset` parameter works with `align=TRUE`. <2017-11-20, Mon>
 o enable mrsd parameter for treedata object <2017-11-15, Wed>
 o set_hilight_legend supports alpha parameter <2017-11-15, Wed>
   + https://github.com/GuangchuangYu/ggtree/issues/149

CHANGES IN VERSION 1.9.4
------------------------
 o geom_hilight_encircle and geom_cladelabel2 <2017-09-12, Tue>
   + https://github.com/GuangchuangYu/ggtree/pull/152
 o set_hilight_legend <2017-08-30, Wed>
 o geom_motif for aligned motif <2017-08-22, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/148
 o fixed `R CMD build` error: cannot stat 'ggtree/site_src/themes': No such file or directory <2017-08-22, Tue>

CHANGES IN VERSION 1.9.3
------------------------
 o update to using !! in tidyr::gather for compatible with tidyr 0.7.0 <2017-08-03, Thu>
 o now geom_text2, geom_label2, geom_point2 and geom_segment2 work with ggplot2 <2017-08-01, Tue>
 o update fortify.jplace to support number of placement (nplace) <2017-07-27, Thu>

CHANGES IN VERSION 1.9.2
------------------------
 o add bg_line and height parameter in msaplot <2017-07-26, Wed>