@@ -30,7 +30,6 @@ Imports:
     treeio (>= 1.3.3),
     utils
 Suggests:
-    Biostrings,
     colorspace,
     cowplot,
     emojifont,
