@@ -200,6 +200,7 @@ importFrom(treeio,Nnode)
 importFrom(treeio,Ntip)
 importFrom(treeio,as.phylo)
 importFrom(treeio,as.treedata)
+importFrom(treeio,read.fasta)
 importFrom(utils,modifyList)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
