@@ -16,7 +16,6 @@ output:
 vignette: >
   %\VignetteIndexEntry{05 Advance Tree Annotation}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{Biostrings}
   %\usepackage[utf8]{inputenc}
 ---
 
@@ -28,7 +27,6 @@ knitr::opts_chunk$set(tidy = FALSE,
 
 ```{r echo=FALSE, results="hide", message=FALSE}
 library("ape")
-library("Biostrings")
 library("treeio")
 library("ggplot2")
 library("ggtree")
